--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,7 +37,10 @@ jwt:
     auth:
       login: "/auth/login"
       register: "/auth/register"
-      refresh: "auth/refresh"
+      refresh: "/auth/refresh"
+    topic:
+      list: "/topic/list"
+      id: "/topic/id"
 
 
 
